without the oops

--- a/configuration/api/controllers.yml
+++ b/configuration/api/controllers.yml
@@ -112,7 +112,7 @@ services:
         arguments: ['@api.response_formatter', '@api_normalizer.event']
 
     ####################################################################################################################
-    # Environments CONTROLLERS
+    # ENVIRONMENTS CONTROLLERS
     ####################################################################################################################
 
     environments.api:
