--- a/configuration/api/routes.yml
+++ b/configuration/api/routes.yml
@@ -136,7 +136,7 @@ parameters:
                     stack: ['middleware.api_require_entity', 'event.api']
 
                 ################################################################################################################
-                # Environment ROUTES
+                # ENVIRONMENTS ROUTES
                 ################################################################################################################
 
                 api.environments:
