Update run build api and add deploy

--- a/configuration/api-writes/controllers.yml
+++ b/configuration/api-writes/controllers.yml
@@ -3,8 +3,16 @@ services:
     build.start.api:
         class: 'Hal\UI\Controllers\API\Build\StartBuildController'
         arguments:
-            - '@api.response_formatter'
+            - '@doctrine.em'
             - '@build.start.validator'
             - '@push.start.validator'
+            - '@api.response_formatter'
+            - '@problem.renderer'
+
+    deploy.api:
+        class: 'Hal\UI\Controllers\API\Push\DeployController'
+        arguments:
             - '@doctrine.em'
+            - '@push.start.validator'
+            - '@api.response_formatter'
             - '@problem.renderer'
