--- a/configuration/api-writes/services.yml
+++ b/configuration/api-writes/services.yml
@@ -1,6 +1,4 @@
 services:
-  rate_limiter:
-      class: 'Hal\UI\Service\APIRateLimitService'
-      arguments:
-        - '@redis'
-        - '%api.ratelimits%'
+    rate_limiter:
+        class: 'Hal\UI\Service\APIRateLimitService'
+        arguments: ['@redis', '%api.ratelimits%']
