--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -3,7 +3,6 @@ imports:
     - resource: '../vendor/ql/mcp-panthor/configuration/panthor.yml'
 
     - resource: 'di.yml'
-    - resource: 'di/services.yml'
 
     - resource: 'ui/controllers.yml'
     - resource: 'ui/middleware.yml'
@@ -23,7 +22,7 @@ imports:
     - resource: 'api-writes/services.yml'
     - resource: 'api-writes/routes.yml'
 
-    - resource: 'config.global.yml'
+    - resource: 'config.default.yml'
     - resource: 'config.env.yml'
 
 parameters:
@@ -46,25 +45,11 @@ parameters:
         - 'slim.global_middleware.user_session'
         - 'slim.global_middleware.srs_business'
 
-
     # Route condition regexes
-
-    # use these
     r.alphanum: '[A-Za-z0-9]+'
     r.digit: '[0-9]+'
     r.guid: '[0-9a-zA-Z]{32,32}'
     r.build: '[A-Za-z0-9\_\-\.]+'
     r.release: '%r.build%'
     r.date: '[0-9]{4}-[0-9]{2}-[0-9]{2}'
-
     r.api.queue: '[A-Za-z0-9\+\-\.]+'
-
-    # not these (deprecated)
-    routes.regex.alphanum: '%r.alphanum%'
-    routes.regex.digit: '%r.digit%'
-    routes.regex.guid: '%r.guid%'
-
-    routes.regex.buildId: '%r.build%'
-    routes.regex.pushId: '%r.release%'
-
-    routes.regex.date: '%r.date%'
